[package]
name = "rewardo-search-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
env_logger = "0.11.8"
log = "0.4.27"
dotenv = "0.15.0"
async-trait = "0.1.88"
